-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.0
-
None
-
-
601924cce (dev), 3544fa163 (6.8)
This is a regression in Qt 6.8
Usual behavior on windows if you right click outside of currently opened context menu is to hide context menu on mouse press and open new context menu on mouse release.
This was always the case in previous versions of Qt. Tested on 6.4.3 and 6.7.2.
In 6.8 it hides current context menu on press but does not open new context menu on release. If right click again - it opens OK.
Steps to reproduce:
- Open "Qt Widgets - Application Example"
- Right click in text area to open context menu
- Right click in text area outside of opened context menu
Expected result
New context menu is opened
Actual result
Only current context menu closes.
- relates to
-
QTBUG-93486 Clean up delivery logic of QContextMenuEvent
-
- Reported
-
| For Gerrit Dashboard: QTBUG-130138 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 601490,2 | Restore event replay when a popup is closed by mouse press outside | dev | qt/qtbase | Status: MERGED | +2 | +1 |
| 602358,2 | Restore event replay when a popup is closed by mouse press outside | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |